feat: client notifications and refactor events
